# FlameChat

./: .gitignore  README.md  flamechat.spec  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: embed_sounds.sh  embed_wav.py  generate_sounds.py
src/flamechat/: __init__.py  __main__.py  app.py  i18n.py
src/flamechat/backend/: attachment.py  audio_analysis.py  chat_store.py  hardware.py  ollama_client.py  ollama_manager.py  recommendations.py  settings.py  summarization.py  transcription.py  vision.py
src/flamechat/locale/: de.json  en.json
src/flamechat/ui/: _click_data.py  _typing_1_data.py  _typing_2_data.py  announcer.py  audio_player.py  chat_list.py  chat_panel.py  intent_dialog.py  models_panel.py  prepare_dialog.py  settings_dialog.py  sounds.py  theme.py
